Convert Power tab's two "Calibrate" dialogs.

--- a/src/tabs/power.html
+++ b/src/tabs/power.html
@@ -197,7 +197,8 @@
     </div>
 </div>
 
-<div class="tab-power" id="calibrationmanagercontent">
+<dialog closedby="any" id="calibrationmanagerdialog" style="border-color: var(--primary-500); padding: 0px;">
+<div id="calibrationmanagercontent" style="padding: 15px 15px">
     <div class = "note">
         <p i18n="powerCalibrationManagerHelp"></p>
     </div>
@@ -228,8 +229,10 @@
         <a class="calibrate" id="calibrate" href="#" i18n="powerCalibrationSave"></a>
     </div>
 </div>
+</dialog>
 
-<div class="tab-power" id="calibrationmanagerconfirmcontent">
+<dialog closedby="any" id="calibrationmanagerconfirmdialog" style="border-color: var(--primary-500); padding: 0px;">
+<div id="calibrationmanagerconfirmcontent" style="padding: 15px 15px">
     <div class = "note">
         <p i18n="powerCalibrationConfirmHelp"></p>
     </div>
@@ -257,3 +260,4 @@
         <a class="discardcalibration" id="discardcalibration" href="#" i18n="powerCalibrationDiscard"></a>
     </div>
 </div>
+</dialog>
